--- a/presentation.html
+++ b/presentation.html
@@ -117,7 +117,7 @@
 
 				<section>
 					<h2>Survey</h2>
-						<!--  Turkish, Uzbek, Azerbaycani, Uyghur, Kazakh, Turkmen, Tatar, Kyrgyz, Bashqort, Iraqi Turkmen, Chuvash, Qashqai, Khorasani, Qaraqalpaq, Crimean Tatar, Qumuq, Qarachay-Balqar, Sakha, Tuvan, Urum, Gagauz, Siberian Tatar, Nogay, Salar, Southern Altay, Khakas, Khalaj, Yughur, Shor, Dolgan, Ili, Tofa, Northern Altay, Karaim, Chulym, Fu-yü Gyrgys, Dukhan -->
+						<!--  Turkish, Uzbek, Azerbaycani, Uyghur, Kazakh, Turkmen, Tatar, Kyrgyz, Bashqort, Iraqi Turkmen, Chuvash, Qashqai, Khorasani, Qaraqalpaq, Crimean Tatar, Qumuq, Qarachay-Balqar, Sakha, Tuvan, Urum, Gagauz, Siberian Tatar, Nogay, Salar, Southern Altay, Khakas, Khalaj, Yughur, Shor, Dolgan, Ili, Tofa, Northern Altay, Krymchak, Karaim, Chulym, Fu-yü Gyrgys, Dukhan -->
 						Localisation, Keyboard, Translate, Voice assistant
 
 						Android TTS support (# engines): Turkish (6), Uzbek (2), Azerbaijani (2), Kazakh (1), Kyrgyz (2), Turkmen (1), Uyghur (1), Tatar (2) <!-- https://accessibleandroid.com/list-of-languages-with-available-tts-engines-on-android/ -->
