--- a/presentation.html
+++ b/presentation.html
@@ -638,7 +638,6 @@ unused
 						<div class="highlight-box">
 							<h4>ISO 639 language codes</h4>
 								<p>(baseline for any hope of language technology)</p>
-								<hr/>
 								<p>None currently for: Iraqi Türkman, Fu-yü Gyrgys, Dukhan</p>
 						</div>
 						<!-- CLDR (for localisation): az, az_Cyrl, cv, kk, ky, tt, tr, tk, ug, uz, uz_Arab, uz_Cyrl, sah
@@ -659,7 +658,8 @@ unused
 							-->
 
 						<div class="highlight-box">
-							<h4>CLDR: baseline localisation data</h4>
+							<h4>CLDR</h4>
+							<p>(baseline localisation data used widely)</p>
 							<table class="supershrink booktabs" style="max-width: 80% !important; margin-bottom: 0.5em;">
 								<tr><th>coverage</th><th>languages</th></tr>
 								<tr style="background-color:rgba(68,100,65,1)"><td>modern</td><td>5: Azərbaycani, Kazakh, Kyrgyz, Turkish, Turkmen, Uzbek</td></tr>
