--- a/presentation.html
+++ b/presentation.html
@@ -772,12 +772,12 @@ unused
 					ал<tag>vaux</tag><tag>neg</tag><tag>ger_fut</tag><tag>px3sp</tag><tag>nom</tag>
 						</td></tr>
 					</table>
-					<p>Range of uses:</p>
+					<p>“Downstream tasks” (uses):</p>
 					<ul>
 						<li>Spell checkers</li>
 						<li>Component of machine translation systems</li>
 						<li>Computer-assisted language-learning (CALL) <!-- e.g., Revita, <a href="https://revita.cs.helsinki.fi">revita.cs.helsinki.fi</a>) --></li>
-						<li>"Downstream" tasks and other research</li>
+						<li>Other NLP tasks and research</li>
 						<li>Whatever else you can imagine</li>
 					</ul>
 					</div>
