thank you slide

--- a/presentation.html
+++ b/presentation.html
@@ -993,7 +993,9 @@ unused
 					<p class="fragment">
 				</section>
 
-
+				<section>
+					<h2>Thank you!</h2>
+				</section>
 
 			</div>
 		</div>
