another last minor post-presentation refinement

--- a/presentation.html
+++ b/presentation.html
@@ -89,6 +89,7 @@
 									<li>Case study</li>
 								</ul>
 								<li>Integrating comunity efforts</li>
+								<li>Concluding thoughts</li>
 							</ul>
 						</div>
 					</div>
@@ -1015,7 +1016,7 @@ unused
 				</section>
 
 				<section>
-					<h2 class="extralarge">Last thoughts</h2>
+					<h2 class="extralarge">Concluding thoughts</h2>
 					<ul>
 						<li>Language technology is important when considering language vitality</li>
 						<li>It probably isn't the most major consideration</li>
