--- a/presentation.html
+++ b/presentation.html
@@ -1139,6 +1139,60 @@ unused
 				</section>
 
 				<section>
+					<h2>Ling 073: Computational Linguistics</h2>
+					<ul>
+						<li>Taught almost every spring</li>
+						<li>Currently 7th run</li>
+						<li>~15-20 students each year</li>
+						<li>Prereq: CS or Ling background</li>
+						<li>Students usually work in pairs or small groups</li>
+						<li>Develop language technology for minoritised language of choice</li>
+						<li>Have to work with grammars, dictionaries, original texts</li>
+						<li>Have to implement materials using a wide range of computational formalisms</li>
+
+					</ul>
+				</section>
+
+				<section>
+					<h2>Urum</h2>
+					<div class="highlight-box">
+						<ul>
+							<li>Turkic language spoken by ethnic Greeks</li>
+							<li>primarily spoken around Mariupol, Ukraine</li>
+							<li>Children have not been raised speaking the language</li>
+							<ul>
+								<li>2000: estimated 190k speakers <span class="citation">(Ethnologue 2015)</span></li>
+								<li>2023: estimated 1k speakers <span class="citation">(Ethnologue 2023)</span></li>
+							<ul>
+							<li>Currently:</li>
+							<ul>
+								<li>Increasing ethnic pride</li>
+								<li>Active interest in language</li>
+								<li>Engaged community of adult learners online</li>
+							</ul>
+						</ul>
+					</div>
+
+					<div class="highlight-box">
+						<ul>
+							<li>Spring 2023, in pair with Sasha Casada</li>
+							<li>Developed morphological transducer</li>
+							<li>Developed machine translation system to English</li>
+						</ul>
+					</div>
+
+					<div class="highlight-box">
+						<ul>
+							<li>Summer 2025</li>
+							<li>Plan to develop tools for community</li>
+							<li>For use as language learning materials</li>
+							<li>Based on Urum morphological transducer</li>
+						</ul>
+					</div>
+
+				</section>
+
+				<section>
 					<h2 class="extralarge">Concluding thoughts</h2>
 					<ul>
 						<li>Language technology is important when considering language vitality</li>
