--- a/presentation.html
+++ b/presentation.html
@@ -1175,7 +1175,7 @@ unused
 
 					<div class="highlight-box">
 						<ul>
-							<li>Spring 2023, in pair with Sasha Casada</li>
+							<li>Ling 073, spring 2023, in pair with Sasha Casada</li>
 							<li>Developed morphological transducer</li>
 							<li>Developed machine translation system to English</li>
 						</ul>
