images and stuff

--- a/presentation.html
+++ b/presentation.html
@@ -35,6 +35,12 @@
 		<link rel="stylesheet" href="jnw-overrides.css">
 	</head>
 
+	<!-- ABSTRACT
+
+	One type of challenge faced by speakers of minoritised and endangered languages in language maintenance and revitalisation efforts is the lack of support for the language on digital platforms.  Specific barriers range from not having the language recognised with an ISO 639 code to no support for personal voice assistants in the language, and everything in between (localisation, input methods, spell checking, machine translation, etc.).  Such tools are important because they add to the ease with which a language can be used in digital contexts, which has the potential to increase both the range of uses and the perceptions of the language, both of which are crucial for maintenance and revitalisation.  In this talk, we overview the current state of affairs regarding language technology, using Turkic languages as a case study.  We further present on work being done both in and out of the classroom right here at Swarthmore to support minoritised languages with language technology.
+
+	-->
+
 	<body>
 
 		<div class="reveal">
@@ -294,20 +300,50 @@ unused
 -->
 
 				<section>
-					<h2>Language technology</h2>
-					<div class="highlight-box">
-						<h4>What is language technology?</h4>
+					<h2>What is language technology?</h2>
+					<!-- div class="highlight-box">
 						<p>anything linguistic that involves interacting with [digital] technology</p>
-						<hr/>
-						<ul>
+						<hr/-->
+						<div style="width: 120%; margin-left: -10%;">
+						<div class="highlight-box" style="display: inline-block; width: 30%">
+							<img src="©img/predictive_text.webp" title="Input methods, predictive text"/>
+						</div>
+						<div class="highlight-box" style="display: inline-block; width: 25.5%">
+							<img src="img/MT.png" title="Machine translation"/>
+						</div>
+						<div style="display: inline-block; width: 20%">
+							<div class="highlight-box" style="display: inline-block">
+								<img src="©img/screenreader_inverted_cropped.png" title="Screen readers (TTS)"/>
+							</div>
+							<div class="highlight-box" style="display: inline-block">
+								<img src="img/spellchecking.png" title="Spell checking"/>
+							</div>
+						</div>
+						<div class="highlight-box" style="display: inline-block; width: 15%">
+							<img src="©img/Siri.png" title="Voice assistants"/>
+						</div>
+
+						<div class="highlight-box" style="display: inline-block; width: 28%">
+							<img src="img/CALL.png" title="Computer-aided language learning"/>
+						</div>
+						<div class="highlight-box" style="display: inline-block; width: 20%">
+							<img src="img/search images.png" title="Search engines"/>
+						</div>
+						<div class="highlight-box" style="display: inline-block; width: 20%">
+							<img src="img/localisation.png" title="Localisation"/>
+						</div>
+						</div>
+						<!-- ul>
 							<li>input methods (keyboards, mobile keyboards, speech recognition)</li>
 							<li>localisation (e.g., text displayed in a program)</li>
 							<li>screen readers (text-to-speech)</li>
 							<li>voice assistants</li>
 							<li>machine translation</li>
 							<li>search engines</li>
-						</ul>
-					</div>
+						</ul -->
+					<!-- /div-->
+				</section>
+				<section>
 					<div class="highlight-box">
 						<h4>Why is language technology important?</h4>
 						<ul>
@@ -326,6 +362,7 @@ unused
 							<li>add to ease with which a language can be used in digital contexts</li>
 							<li>increases range of uses of language</li>
 							<li>raises perceptions of language</li>
+							<li>support maintenance and revitalisation efforts</li>
 						</ul>
 					</div>
 
