--- a/presentation.html
+++ b/presentation.html
@@ -1337,7 +1337,7 @@ unused
 					</div>
 				</section>
 
-				<section>
+				<section data-background-image="©img/Donetsk_in_Ukraine.svg" data-background-size="90%" data-background-opacity="0.25">
 					<h2>Urum: background</h2>
 					<div class="highlight-box">
 						<ul>
