more land acknowledgement

--- a/presentation.html
+++ b/presentation.html
@@ -52,8 +52,8 @@
 				</section>
 
 				<section data-state="no-toc-progress">
-					<p><span style="font-size: 140%" class="highlight-red">Yukwe ènta kishkwik Lënapehòkink këmaèhëlehëna.  Kenahkituneyo Lënapeyòk yu hàki òk Lënapei Sipu lòmëwe, yukwe, òk apchich.  Nëmaxinkwelëmawënanàk Lënapeyunkahke, yukwe òk alàpa èntalawsihtit Lënapeyòk.</span></p>
-					<p>(We gather today in Lenapehoking.  We recognise the Lenape as past, present, and future stewards of this land and the Delaware River.  We honor the Lenape who were, those who are, and those who will be.)</p>
+					<p><span style="font-size: 140%" class="highlight-red">Yukwe ènta kishkwik Lënapehòkink këmaèhëlehëna.  Kenahkituneyo Lënapeyòk yu hàki òk Lënapei Sipu lòmëwe, yukwe, òk apchich.  Tëlsëtàm tìlìch nëmaxinkwelëmënën Lënapeyunkahke, yukwe òk alàpa èntalawsihtit Lënapeyòk.</span></p>
+					<p>(We gather today in Lenapehoking.  We recognise the Lenape as past, present, and future stewards of this land and the Delaware River.  Let us honor through our actions the Lenape who were, those who are, and those who will be.)</p>
 				</section>
 
 
@@ -1452,7 +1452,9 @@ unused
 				<section>
 				<section>
 					<h2 class="extralarge">Thank you!</h2>
-					<p>slides available at<br/><a href="https://jonorthwash.github.io/2025-TurkicLangTech/presentation.html">https://jonorthwash.github.io/2025-TurkicLangTech/presentation.html</a>
+					<p>slides available at<br/><a href="https://jonorthwash.github.io/2025-TurkicLangTech/presentation.html">https://jonorthwash.github.io/2025-TurkicLangTech/presentation.html</a><br/>
+					<img src="img/presentation_qrcode.png"/>
+					</p>
 				</section>
 
 				<section data-auto-animate>
