minor fix to land acknowledgement

--- a/presentation.html
+++ b/presentation.html
@@ -52,7 +52,7 @@
 				</section>
 
 				<section data-state="no-toc-progress">
-					<p><span style="font-size: 140%" class="highlight-red">Yukwe ènta kishkwik Lënapehòkink këmaèhëlehëna.  Kenahkituneyo Lënapeyòk yu hàki òk Lënapei Sipu lòmëwe, yukwe, òk apchich.  Tëlsëtàm tìlìch nëmaxinkwelëmënën Lënapeyunkahke, yukwe òk alàpa èntalawsihtit Lënapeyòk.</span></p>
+					<p><span style="font-size: 140%" class="highlight-red">Yukwe ènta kishkwik Lënapehòkink këmaèhëlehëna.  Kenahkituneyo Lënapeyòk yu hàki òk Lënapei Sipu lòmëwe, yukwe, òk apchich.  Tëlsëtàm tìlìch këmaxinkwelëmënën Lënapeyunkahke, yukwe òk alàpa èntalawsihtit Lënapeyòk.</span></p>
 					<p>(We gather today in Lenapehoking.  We recognise the Lenape as past, present, and future stewards of this land and the Delaware River.  Let us honor through our actions the Lenape who were, those who are, and those who will be.)</p>
 				</section>
 
